--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "bootstrap": "^4.5.2",
     "cheerio": "^1.0.0-rc.3",
     "gh-pages": "^3.1.0",
+    "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "request": "^2.88.2",
