--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "cheerio": "^1.0.0-rc.3",
     "gh-pages": "^3.1.0",
+    "image-downloader": "^4.0.1",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
